# browsefleet-python

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  skill.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml  skill-smoke.yml
examples/: README.md
examples/agent_task/: README.md  main.py
examples/async_client/: README.md  main.py
examples/operator_mode/: README.md  main.py
examples/quickstart/: README.md  main.py
src/browsefleet/: __init__.py  client.py  errors.py  types.py
tests/: test_async_client.py  test_client.py  test_errors.py  test_sessions.py
