[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browsefleet"
version = "0.1.0"
description = "Python SDK for the BrowseFleet cloud browser API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "RJ Murray" },
]
keywords = ["browser", "automation", "scraping", "headless", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://browsefleet.com"
Repository = "https://github.com/rjmurray/browsefleet-python"
Documentation = "https://browsefleet.com/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/browsefleet"]
