[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browsefleet"
version = "1.0.0"
description = "Official Python SDK for BrowseFleet, the open-source cloud browser API for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "RJ Murray and contributors" },
]
keywords = [
    "browser",
    "headless",
    "automation",
    "scraping",
    "screenshot",
    "puppeteer",
    "cloud-browser",
    "browser-api",
    "ai-agent",
    "stealth",
    "browsefleet",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://browsefleet.com"
Source = "https://github.com/theRJMurray/browsefleet-python"
Issues = "https://github.com/theRJMurray/browsefleet-python/issues"
Changelog = "https://github.com/theRJMurray/browsefleet-python/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/browsefleet"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PT", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
# Relaxed from `strict = true` because:
# (1) httpx `.json()` returns Any; route methods that return parsed JSON
#     bodies bubble Any up, and casting at every boundary is overhead.
# (2) The class-scoped `list()` method shadows `builtins.list` in type
#     annotations within the same class; renaming would be a breaking
#     public-API change.
# Real type discipline (disallow_untyped_defs + check_untyped_defs) is kept.

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
